Solve problem with lab1